--- a/src/frontend/citaciones/gestionar_citaciones/gestionar_citaciones.html
+++ b/src/frontend/citaciones/gestionar_citaciones/gestionar_citaciones.html
@@ -106,6 +106,7 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/config.js"></script>
     <script src="../../globales/validacion/validacion.js"></script>
     <script src="../../globales/msg/mensaje.js"></script>
     <script src="gestionar_citaciones.js"></script>
