--- a/src/frontend/evaluacion/evaluacion_estudiante/evaluacion_estudiante.html
+++ b/src/frontend/evaluacion/evaluacion_estudiante/evaluacion_estudiante.html
@@ -1,24 +1,25 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <HTML>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Pagína inicial</title>
-  <link rel="stylesheet" href="./evaluacion_estudiante.css">
-  <link rel="stylesheet" href="../../header/header.css">
-  <link rel="stylesheet" href="../../footer/footer.css">
+    <meta charset="UTF-8">
+    <title>Pagína inicial</title>
+    <link rel="stylesheet" href="./evaluacion_estudiante.css">
+    <link rel="stylesheet" href="../../header/header.css">
+    <link rel="stylesheet" href="../../footer/footer.css">
 </head>
 
 <!-- ===== HEADER ===== -->
-    <header class="main-header">
-        <div class="header-logo">
+<header class="main-header">
+    <div class="header-logo">
         <div class="logo-circle"></div>
         <div class="logo-text">
             <h1>Instituto educativo</h1>
             <h2>Infancia</h2>
         </div>
-        </div>
+    </div>
 
-        <nav class="header-nav">
+    <nav class="header-nav">
         <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
         <span class="nav-link">Contacto</span>
         <div class="nav-box">
@@ -27,13 +28,13 @@
         <a href="../login/login.html" class="nav-link login-link">
             Iniciar sesión
         </a>
-        </nav>
+    </nav>
 
-    </header>
+</header>
 
 
-  <!-- ===== MAIN ===== -->
-    <main class="evaluacion-container">
+<!-- ===== MAIN ===== -->
+<main class="evaluacion-container">
 
     <h2 class="evaluacion-titulo">Evaluación de nombre_estudiante</h2>
 
@@ -41,18 +42,18 @@
 
         <table class="evaluacion-tabla">
 
-        <thead>
-            <tr>
-            <th>Categoría logro</th>
-            <th>Descripción</th>
-            <th>Corte 1</th>
-            <th>Corte 2</th>
-            <th>Corte 3</th>
-            </tr>
-        </thead>
+            <thead>
+                <tr>
+                    <th>Categoría logro</th>
+                    <th>Descripción</th>
+                    <th>Corte 1</th>
+                    <th>Corte 2</th>
+                    <th>Corte 3</th>
+                </tr>
+            </thead>
 
-        <tbody id="tablaEvaluaciones">
-        </tbody>
+            <tbody id="tablaEvaluaciones">
+            </tbody>
 
         </table>
 
@@ -64,22 +65,23 @@
 
     </form>
 
-    </main>
+</main>
 
-    <!-- ===== FOOTER ===== -->
-    <footer class="main-footer">
-        <div class="footer-section">Somos una institución sobre...</div>
-        <div class="footer-section">Redes...</div>
-        <div class="footer-section">Cosas...</div>
-    </footer>
+<!-- ===== FOOTER ===== -->
+<footer class="main-footer">
+    <div class="footer-section">Somos una institución sobre...</div>
+    <div class="footer-section">Redes...</div>
+    <div class="footer-section">Cosas...</div>
+</footer>
 
-    <script src="../../globales/msg/mensaje.js"></script>
-    <script src="../../globales/validacion/validacion.js"></script>
+<script src="../../globales/config.js"></script>
+<script src="../../globales/msg/mensaje.js"></script>
+<script src="../../globales/validacion/validacion.js"></script>
 
-    <script src="./evaluacion_estudiante.js"></script>
-    <script type="module" src="./generar_boletin.js"></script>
+<script src="./evaluacion_estudiante.js"></script>
+<script type="module" src="./generar_boletin.js"></script>
 
-    <script src="../../header/finalizar_sesion.js"></script>
-    <script src="../../header/pagina_inicio.js"> </script>
+<script src="../../header/finalizar_sesion.js"></script>
+<script src="../../header/pagina_inicio.js"> </script>
 
 </HTML>
