--- a/src/frontend/restablecer_contraseña/ingresar_nueva_contraseña/ingresar_nueva_contraseña.html
+++ b/src/frontend/restablecer_contraseña/ingresar_nueva_contraseña/ingresar_nueva_contraseña.html
@@ -72,6 +72,7 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/config.js"></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="ingresar_nueva_contraseña.js" defer></script>
 </body>
