--- a/src/frontend/usuarios/creacion_usuario_acudiente/creacion_usuario_acudiente.html
+++ b/src/frontend/usuarios/creacion_usuario_acudiente/creacion_usuario_acudiente.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Administrador de usuarios</title>
@@ -11,30 +12,30 @@
 </head>
 
 <body>
-    <!-- ===== HEADER ===== -->
-    <header class="main-header">
-      <div class="header-logo">
-        <div class="logo-circle"></div>
-        <div class="logo-text">
-          <h1>Instituto educativo</h1>
-          <h2>Infancia</h2>
-        </div>
+  <!-- ===== HEADER ===== -->
+  <header class="main-header">
+    <div class="header-logo">
+      <div class="logo-circle"></div>
+      <div class="logo-text">
+        <h1>Instituto educativo</h1>
+        <h2>Infancia</h2>
       </div>
+    </div>
 
-      <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
-        <span class="nav-link">Contacto</span>
-        <div class="nav-box">
-          <span class="nav-icon">📅</span>
-        </div>
-        <a href="./login.html" class="nav-link login-link">
-          Iniciar sesión
-        </a>
-      </nav>
+    <nav class="header-nav">
+      <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+      <span class="nav-link">Contacto</span>
+      <div class="nav-box">
+        <span class="nav-icon">📅</span>
+      </div>
+      <a href="./login.html" class="nav-link login-link">
+        Iniciar sesión
+      </a>
+    </nav>
 
-    </header>
+  </header>
 
-    <!-- ===== MAIN ===== -->
+  <!-- ===== MAIN ===== -->
   <main class="crear-acudiente-container">
 
     <div class="header-acudiente">
@@ -72,19 +73,21 @@
 
 
 
-    <!-- ===== FOOTER ===== -->
-    <footer class="main-footer">
-      <div class="footer-section">Somos una institución sobre...</div>
-      <div class="footer-section">Redes...</div>
-      <div class="footer-section">Cosas...</div>
-    </footer>
+  <!-- ===== FOOTER ===== -->
+  <footer class="main-footer">
+    <div class="footer-section">Somos una institución sobre...</div>
+    <div class="footer-section">Redes...</div>
+    <div class="footer-section">Cosas...</div>
+  </footer>
 
-    <script src="../../globales/validacion/validacion.js" defer></script>
-    <script src="../../globales/msg/mensaje.js" defer></script>
-    <script type="module" src="./creacion_usuario_acudiente.js" defer></script>
+  <script src="../../globales/config.js"></script>
+  <script src="../../globales/validacion/validacion.js" defer></script>
+  <script src="../../globales/msg/mensaje.js" defer></script>
+  <script type="module" src="./creacion_usuario_acudiente.js" defer></script>
 
-    <script src="../../header/finalizar_sesion.js"></script>
-    <script src="../../header/pagina_inicio.js"> </script>
+  <script src="../../header/finalizar_sesion.js"></script>
+  <script src="../../header/pagina_inicio.js"> </script>
 
 </body>
+
 </html>
