--- a/src/frontend/academico/asignar_profesor/asignar_profesor.html
+++ b/src/frontend/academico/asignar_profesor/asignar_profesor.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Asignar profesor</title>
-    <link rel="stylesheet" href="./asignar_profesor.css">
-    <link rel="stylesheet" href="../../globales/msg/mensaje.css">
-    <link rel="stylesheet" href="../../header/header.css">
-    <link rel="stylesheet" href="../../footer/footer.css">
+  <meta charset="UTF-8">
+  <title>Asignar profesor</title>
+  <link rel="stylesheet" href="./asignar_profesor.css">
+  <link rel="stylesheet" href="../../globales/msg/mensaje.css">
+  <link rel="stylesheet" href="../../header/header.css">
+  <link rel="stylesheet" href="../../footer/footer.css">
 </head>
 
 <!-- ===== HEADER ===== -->
-    <header class="main-header">
-      <div class="header-logo">
-        <div class="logo-circle"></div>
-        <div class="logo-text">
-          <h1>Instituto educativo</h1>
-          <h2>Infancia</h2>
-        </div>
-      </div>
+<header class="main-header">
+  <div class="header-logo">
+    <div class="logo-circle"></div>
+    <div class="logo-text">
+      <h1>Instituto educativo</h1>
+      <h2>Infancia</h2>
+    </div>
+  </div>
 
-      <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
-        <span class="nav-link">Contacto</span>
-        <div class="nav-box">
-          <span class="nav-icon">📅</span>
-        </div>
-        <a href="./login.html" class="nav-link login-link">
-          Iniciar sesión
-        </a>
-      </nav>
+  <nav class="header-nav">
+    <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+    <span class="nav-link">Contacto</span>
+    <div class="nav-box">
+      <span class="nav-icon">📅</span>
+    </div>
+    <a href="./login.html" class="nav-link login-link">
+      Iniciar sesión
+    </a>
+  </nav>
 
-    </header>
+</header>
 
-    <body>
-        <h2>Asignar profesor a grupo</h2>
+<body>
+  <h2>Asignar profesor a grupo</h2>
 
-        <div id="contenedor-profesores"></div>
+  <div id="contenedor-profesores"></div>
 
-    </body>
+</body>
 
-    <!-- ===== FOOTER ===== -->
-    <footer class="main-footer">
-      <div class="footer-section">Somos una institución sobre...</div>
-      <div class="footer-section">Redes...</div>
-      <div class="footer-section">Cosas...</div>
-    </footer>
-    
-    <script src="../../globales/validacion/validacion.js" defer></script>
-    <script src="./asignar_profesor.js" defer></script>
-    <script src="../../globales/msg/mensaje.js" defer></script>
+<!-- ===== FOOTER ===== -->
+<footer class="main-footer">
+  <div class="footer-section">Somos una institución sobre...</div>
+  <div class="footer-section">Redes...</div>
+  <div class="footer-section">Cosas...</div>
+</footer>
 
-    <script src="../../header/finalizar_sesion.js"></script>
-    <script src="../../header/pagina_inicio.js"> </script>
+<script src="../../globales/config.js"></script>
+<script src="../../globales/validacion/validacion.js" defer></script>
+<script src="./asignar_profesor.js" defer></script>
+<script src="../../globales/msg/mensaje.js" defer></script>
+
+<script src="../../header/finalizar_sesion.js"></script>
+<script src="../../header/pagina_inicio.js"> </script>
 
 </html>
