--- a/src/frontend/boletines/vista_boletines/boletines.html
+++ b/src/frontend/boletines/vista_boletines/boletines.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Boletines</title>
@@ -10,68 +11,70 @@
 </head>
 
 <body>
-    <!-- ===== HEADER ===== -->
-    <header class="main-header">
-      <div class="header-logo">
-        <div class="logo-circle"></div>
-        <div class="logo-text">
-          <h1>Instituto educativo</h1>
-          <h2>Infancia</h2>
-        </div>
+  <!-- ===== HEADER ===== -->
+  <header class="main-header">
+    <div class="header-logo">
+      <div class="logo-circle"></div>
+      <div class="logo-text">
+        <h1>Instituto educativo</h1>
+        <h2>Infancia</h2>
       </div>
+    </div>
 
-      <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
-        <span class="nav-link">Contacto</span>
-        <div class="nav-box">
-          <span class="nav-icon">📅</span>
-        </div>
-        <a href="./login.html" class="nav-link login-link">
-          Iniciar sesión
-        </a>
-      </nav>
+    <nav class="header-nav">
+      <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+      <span class="nav-link">Contacto</span>
+      <div class="nav-box">
+        <span class="nav-icon">📅</span>
+      </div>
+      <a href="./login.html" class="nav-link login-link">
+        Iniciar sesión
+      </a>
+    </nav>
 
-    </header>
+  </header>
 
-    <!-- ===== MAIN ===== -->
-    <main class="boletines-container">
+  <!-- ===== MAIN ===== -->
+  <main class="boletines-container">
 
-        <h2 class="titulo-boletines">Boletines</h2>
+    <h2 class="titulo-boletines">Boletines</h2>
 
-        <section class="tabla-boletines">
-            <table>
-            <thead>
-                <tr>
-                <th>Nombre</th>
-                <th>Boletines</th>
-                </tr>
-            </thead>
+    <section class="tabla-boletines">
+      <table>
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Boletines</th>
+          </tr>
+        </thead>
 
-            <tbody id="tablaBoletines">
-                <!-- Filas dinámicas -->
-            </tbody>
-            </table>
-        </section>
+        <tbody id="tablaBoletines">
+          <!-- Filas dinámicas -->
+        </tbody>
+      </table>
+    </section>
 
-    </main>
-    
-    <!-- ===== FOOTER ===== -->
-    <footer class="main-footer">
-      <div class="footer-section">Somos una institución sobre...</div>
-      <div class="footer-section">Redes...</div>
-      <div class="footer-section">Cosas...</div>
-    </footer>
+  </main>
+
+  <!-- ===== FOOTER ===== -->
+  <footer class="main-footer">
+    <div class="footer-section">Somos una institución sobre...</div>
+    <div class="footer-section">Redes...</div>
+    <div class="footer-section">Cosas...</div>
+  </footer>
 
 
-    <script src="../boletin_particular/descargar_boletin.js"></script>
+  <script src="../../globales/config.js"></script>
+  <script src="../boletin_particular/descargar_boletin.js"></script>
 
-    <script src="../../globales/validacion/validacion.js" defer></script>
-    <script src="../../globales/msg/mensaje.js" defer></script>
+  <script src="../../globales/validacion/validacion.js" defer></script>
+  <script src="../../globales/msg/mensaje.js" defer></script>
 
-    <script src="./boletines.js" defer></script>
+  <script src="./boletines.js" defer></script>
 
-    <script src="../../header/finalizar_sesion.js"></script>
-    <script src="../../header/pagina_inicio.js"> </script>
+  <script src="../../header/finalizar_sesion.js"></script>
+  <script src="../../header/pagina_inicio.js"> </script>
 
 </body>
+
 </html>
