--- a/src/frontend/citaciones/enviar_citacion_entrevista/enviar_citacion_entrevista.html
+++ b/src/frontend/citaciones/enviar_citacion_entrevista/enviar_citacion_entrevista.html
@@ -83,6 +83,7 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/config.js"></script>
     <script src="../../globales/validacion/validacion.js"></script>
     <script src="../../globales/msg/mensaje.js"></script>
     <script src="enviar_citacion_entrevista.js"></script>
