--- a/src/frontend/evaluacion/vista_profesor/vista_profesor.html
+++ b/src/frontend/evaluacion/vista_profesor/vista_profesor.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Administrador académico </title>
@@ -10,70 +11,72 @@
 </head>
 
 <body>
-    <!-- ===== HEADER ===== -->
-    <header class="main-header">
-      <div class="header-logo">
-        <div class="logo-circle"></div>
-        <div class="logo-text">
-          <h1>Instituto educativo</h1>
-          <h2>Infancia</h2>
-        </div>
+  <!-- ===== HEADER ===== -->
+  <header class="main-header">
+    <div class="header-logo">
+      <div class="logo-circle"></div>
+      <div class="logo-text">
+        <h1>Instituto educativo</h1>
+        <h2>Infancia</h2>
       </div>
+    </div>
 
-      <nav class="header-nav">
-        <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
-        <span class="nav-link">Contacto</span>
-        <div class="nav-box">
-          <span class="nav-icon">📅</span>
-        </div>
-        <a href="./login.html" class="nav-link login-link">
-          Iniciar sesión
-        </a>
-      </nav>
+    <nav class="header-nav">
+      <a href="../interfaz inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+      <span class="nav-link">Contacto</span>
+      <div class="nav-box">
+        <span class="nav-icon">📅</span>
+      </div>
+      <a href="./login.html" class="nav-link login-link">
+        Iniciar sesión
+      </a>
+    </nav>
 
-    </header>
+  </header>
 
-    <!-- ===== MAIN ===== -->
-    <main class="profesor-lista-container">
+  <!-- ===== MAIN ===== -->
+  <main class="profesor-lista-container">
 
-        <div class="encabezado-lista">
-            <h2 class="titulo-seccion">
-                Lista de estudiantes<br>
-                grupo del Grupo_id
-            </h2>
-        </div>
+    <div class="encabezado-lista">
+      <h2 class="titulo-seccion">
+        Lista de estudiantes<br>
+        grupo del Grupo_id
+      </h2>
+    </div>
 
-        <div class="contenedor-tabla">
-            <table class="tabla-estudiantes">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th></th>
-                    </tr>
-                </thead>
+    <div class="contenedor-tabla">
+      <table class="tabla-estudiantes">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th></th>
+          </tr>
+        </thead>
 
-                <tbody id="tablaEstudiantes">
-                    <!-- Se llena dinámicamente -->
-                </tbody>
-            </table>
-        </div>
+        <tbody id="tablaEstudiantes">
+          <!-- Se llena dinámicamente -->
+        </tbody>
+      </table>
+    </div>
 
-    </main>
+  </main>
 
-    <!-- ===== FOOTER ===== -->
-    <footer class="main-footer">
-      <div class="footer-section">Somos una institución sobre...</div>
-      <div class="footer-section">Redes...</div>
-      <div class="footer-section">Cosas...</div>
-    </footer>
+  <!-- ===== FOOTER ===== -->
+  <footer class="main-footer">
+    <div class="footer-section">Somos una institución sobre...</div>
+    <div class="footer-section">Redes...</div>
+    <div class="footer-section">Cosas...</div>
+  </footer>
 
-    <script src="../../globales/msg/mensaje.js"></script>
-    <script src="../../globales/validacion/validacion.js"></script>
+  <script src="../../globales/config.js"></script>
+  <script src="../../globales/msg/mensaje.js"></script>
+  <script src="../../globales/validacion/validacion.js"></script>
 
-    <script src="./vista_profesor.js" defer></script>
+  <script src="./vista_profesor.js" defer></script>
 
-    <script src="../../header/finalizar_sesion.js"></script>
-    <script src="../../header/pagina_inicio.js"> </script>
+  <script src="../../header/finalizar_sesion.js"></script>
+  <script src="../../header/pagina_inicio.js"> </script>
 
 </body>
+
 </html>
