--- a/src/frontend/formularios/formulario_inscripcion.html
+++ b/src/frontend/formularios/formulario_inscripcion.html
@@ -1,5 +1,6 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <HTML>
+
 <head>
   <meta charset="UTF-8">
   <title>Pagína inicial</title>
@@ -10,117 +11,118 @@
 </head>
 
 <!-- ===== HEADER ===== -->
-    <header class="main-header">
-        <div class="header-logo">
-        <div class="logo-circle"></div>
-        <div class="logo-text">
-            <h1>Instituto educativo</h1>
-            <h2>Infancia</h2>
-        </div>
-        </div>
-
-        <nav class="header-nav">
-        <a href="../interfaz_inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
-        <span class="nav-link">Contacto</span>
-        <div class="nav-box">
-            <span class="nav-icon">📅</span>
-        </div>
-        <a href="../login/login.html" class="nav-link login-link">
-            Iniciar sesión
-        </a>
-        </nav>
-
-    </header>
-
-
-  <!-- ===== MAIN ===== -->
-  <main class="formulario-container">
-    <section class="formulario-section">
-      <h2>Datos del acudiente</h2>
-      <form id="form-inscripcion">
-        <div class="form-group">
-          <label for="nombreAcudiente1">Primer nombre</label>
-          <input type="text" id="nombreAcudiente1" required>
-        </div>
-        <div class="form-group">
-          <label for="nombreAcudiente2">Segundo nombre</label>
-          <input type="text" id="nombreAcudiente2">
-        </div>
-        <div class="form-group">
-          <label for="apellidoAcudiente1">Primer apellido</label>
-          <input type="text" id="apellidoAcudiente1" required>
-        </div>
-        <div class="form-group">
-          <label for="apellidoAcudiente2">Segundo apellido</label>
-          <input type="text" id="apellidoAcudiente2">
-        </div>
-        <div class="form-group">
-          <label for="correoAcudiente">Correo</label>
-          <input type="email" id="correoAcudiente" required>
-        </div>
-        <div class="form-group">
-          <label for="cedulaAcudiente">Cédula ciudadanía</label>
-          <input type="text" id="cedulaAcudiente" required>
-        </div>
-
-        <div class="checkbox-group">
-          <input type="checkbox" id="autorizo" required>
-          <label for="autorizo"><em>Autorizo uso de datos personales</em></label>
-        </div>
-      </form>
-    </section>
-
-    <section class="formulario-section">
-      <h2>Datos del infante</h2>
-      <form>
-        <div class="form-group">
-          <label for="nombreInfante1">Primer nombre</label>
-          <input type="text" id="nombreInfante1" required>
-        </div>
-        <div class="form-group">
-          <label for="nombreInfante2">Segundo nombre</label>
-          <input type="text" id="nombreInfante2">
-        </div>
-        <div class="form-group">
-          <label for="apellidoInfante1">Primer apellido</label>
-          <input type="text" id="apellidoInfante1" required>
-        </div>
-        <div class="form-group">
-          <label for="apellidoInfante2">Segundo apellido</label>
-          <input type="text" id="apellidoInfante2">
-        </div>
-        <div class="form-group">
-          <label for="fechaNacimiento">Fecha de nacimiento</label>
-          <input type="date" id="fechaNacimiento" required>
-        </div>
-        <div class="form-group">
-          <label for="grado">Grado al que aplica</label>
-          <select id="grado" required>
-            <option value="">Seleccione...</option>
-            <option value="Párvulos">Párvulos</option>
-            <option value="Caminadores">Caminadores</option>
-            <option value="Prejardín">Prejardín</option>
-          </select>
-        </div>
-      </form>
-    </section>
-
-    <div class="form-boton">
-      <button id="btnEnviar" class="btn-enviar">Enviar</button>
+<header class="main-header">
+  <div class="header-logo">
+    <div class="logo-circle"></div>
+    <div class="logo-text">
+      <h1>Instituto educativo</h1>
+      <h2>Infancia</h2>
     </div>
-  </main>
+  </div>
+
+  <nav class="header-nav">
+    <a href="../interfaz_inicial/main.html" class="nav-link" id="btn-inicio">Inicio</a>
+    <span class="nav-link">Contacto</span>
+    <div class="nav-box">
+      <span class="nav-icon">📅</span>
+    </div>
+    <a href="../login/login.html" class="nav-link login-link">
+      Iniciar sesión
+    </a>
+  </nav>
+
+</header>
 
 
-    <!-- ===== FOOTER ===== -->
-    <footer class="main-footer">
-        <div class="footer-section">Somos una institución sobre...</div>
-        <div class="footer-section">Redes...</div>
-        <div class="footer-section">Cosas...</div>
-    </footer>
+<!-- ===== MAIN ===== -->
+<main class="formulario-container">
+  <section class="formulario-section">
+    <h2>Datos del acudiente</h2>
+    <form id="form-inscripcion">
+      <div class="form-group">
+        <label for="nombreAcudiente1">Primer nombre</label>
+        <input type="text" id="nombreAcudiente1" required>
+      </div>
+      <div class="form-group">
+        <label for="nombreAcudiente2">Segundo nombre</label>
+        <input type="text" id="nombreAcudiente2">
+      </div>
+      <div class="form-group">
+        <label for="apellidoAcudiente1">Primer apellido</label>
+        <input type="text" id="apellidoAcudiente1" required>
+      </div>
+      <div class="form-group">
+        <label for="apellidoAcudiente2">Segundo apellido</label>
+        <input type="text" id="apellidoAcudiente2">
+      </div>
+      <div class="form-group">
+        <label for="correoAcudiente">Correo</label>
+        <input type="email" id="correoAcudiente" required>
+      </div>
+      <div class="form-group">
+        <label for="cedulaAcudiente">Cédula ciudadanía</label>
+        <input type="text" id="cedulaAcudiente" required>
+      </div>
 
-    <script src="../globales/msg/mensaje.js"></script>
-    <script src="../globales/intentos/intentos.js"></script>
+      <div class="checkbox-group">
+        <input type="checkbox" id="autorizo" required>
+        <label for="autorizo"><em>Autorizo uso de datos personales</em></label>
+      </div>
+    </form>
+  </section>
 
-    <script src="./formulario_inscripcion.js"></script>
-    
+  <section class="formulario-section">
+    <h2>Datos del infante</h2>
+    <form>
+      <div class="form-group">
+        <label for="nombreInfante1">Primer nombre</label>
+        <input type="text" id="nombreInfante1" required>
+      </div>
+      <div class="form-group">
+        <label for="nombreInfante2">Segundo nombre</label>
+        <input type="text" id="nombreInfante2">
+      </div>
+      <div class="form-group">
+        <label for="apellidoInfante1">Primer apellido</label>
+        <input type="text" id="apellidoInfante1" required>
+      </div>
+      <div class="form-group">
+        <label for="apellidoInfante2">Segundo apellido</label>
+        <input type="text" id="apellidoInfante2">
+      </div>
+      <div class="form-group">
+        <label for="fechaNacimiento">Fecha de nacimiento</label>
+        <input type="date" id="fechaNacimiento" required>
+      </div>
+      <div class="form-group">
+        <label for="grado">Grado al que aplica</label>
+        <select id="grado" required>
+          <option value="">Seleccione...</option>
+          <option value="Párvulos">Párvulos</option>
+          <option value="Caminadores">Caminadores</option>
+          <option value="Prejardín">Prejardín</option>
+        </select>
+      </div>
+    </form>
+  </section>
+
+  <div class="form-boton">
+    <button id="btnEnviar" class="btn-enviar">Enviar</button>
+  </div>
+</main>
+
+
+<!-- ===== FOOTER ===== -->
+<footer class="main-footer">
+  <div class="footer-section">Somos una institución sobre...</div>
+  <div class="footer-section">Redes...</div>
+  <div class="footer-section">Cosas...</div>
+</footer>
+
+<script src="../globales/config.js"></script>
+<script src="../globales/msg/mensaje.js"></script>
+<script src="../globales/intentos/intentos.js"></script>
+
+<script src="./formulario_inscripcion.js"></script>
+
 </HTML>
