--- a/src/frontend/login/login.html
+++ b/src/frontend/login/login.html
@@ -61,6 +61,7 @@
     <div class="footer-section">Cosas...</div>
   </footer>
 
+  <script src="../globales/config.js"></script>
   <script src="../globales/msg/mensaje.js" defer></script>
   <script src="../boletines/boletin_particular/descargar_boletin.js"></script>
   <script src="../globales/intentos/intentos.js"></script>
