--- a/src/frontend/restablecer_contraseña/solicitud_restablecer_contraseña/solicitud_restablecer_contraseña.html
+++ b/src/frontend/restablecer_contraseña/solicitud_restablecer_contraseña/solicitud_restablecer_contraseña.html
@@ -59,6 +59,7 @@
         <div class="footer-section">Cosas...</div>
     </footer>
 
+    <script src="../../globales/config.js"></script>
     <script src="../../globales/msg/mensaje.js" defer></script>
     <script src="solicitud_restablecer_contraseña.js" defer></script>
 </body>
