solucion errores de inicio y build

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<HTML>
+<html lang="es">
 
 <head>
-  <title>Mi primer WEB</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirigiendo...</title>
+  <script>
+    window.location.replace("./interfaz_inicial/main.html");
+  </script>
 </head>
 
 <body>
-  <div id="una capa">
-    <h1>Hola mundo!</h1>
-    <p>Error not found.</p>
-  </div>
-  <script src="./globales/config.js"></script>
+  <p>Si no eres redirigido, <a href="./interfaz_inicial/main.html">haz clic aquí</a>.</p>
 </body>
 
-</HTML>
+</html>
